[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/laserLeftShoot.png" type="Texture" id=1]
[ext_resource path="res://src/Objects/LaserGun.gd" type="Script" id=2]
[ext_resource path="res://assets/laserLeft.png" type="Texture" id=3]
[ext_resource path="res://src/Objects/Laser.tscn" type="PackedScene" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Fire",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Normal",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 70, 60 )

[sub_resource type="Animation" id=3]
resource_name = "Fire"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "Normal", "Fire", "Normal" ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fire"
} ]
}

[node name="LaserGun" type="StaticBody2D"]
position = Vector2( 0, -80 )
script = ExtResource( 2 )
Laser = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 10 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "Normal"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 20 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fire = SubResource( 3 )

[node name="ShotTimer" type="Timer" parent="."]

[node name="FirePosition" type="Position2D" parent="."]
position = Vector2( -67, 10 )
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
